--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -15,14 +15,6 @@
                     <div class="top-wrap">
                         <div class="header-wrap">
                             <span class="table__count">전체<i class="value" th:text="${count}"></i></span>
-<!--                            <form class="table__search check-search">-->
-<!--                                <select class="select" name="sort">-->
-<!--                                    <option value="company" th:selected="${sort} eq 'company'">업체</option>-->
-<!--                                    <option value="writer" th:selected="${sort} eq 'writer'">작성자</option>-->
-<!--                                </select>-->
-<!--                                <input class="input" name="search" type="text" th:value="${search}" placeholder="검색어 입력">-->
-<!--                                <button type="submit" class="btn-prime check-btn">검색</button>-->
-<!--                            </form>-->
                         </div>
                     </div>
                 </div>
@@ -30,17 +22,16 @@
                     <thead>
                     <tr>
                         <th class="check"><input type="checkbox" name="checkAll" id="checkAll"></th>
-                        <th>번호</th>
-                        <th>제목</th>
-                        <th class="w-550">내용</th>
-                        <th>작성자</th>
-                        <th>등록일</th>
+                        <th class="w-100">번호</th>
+                        <th class="w-850">제목</th>
+                        <th class="w-250">작성자</th>
+                        <th class="w-250">등록일</th>
                     </tr>
                     </thead>
 
                     <tbody th:if="${count} eq 0">
                     <tr>
-                        <td colspan="6">
+                        <td colspan="5">
                             <span>등록된 공지사항이 없습니다.</span>
                         </td>
                     </tr>
@@ -48,27 +39,23 @@
 
                     <tbody th:if="${count} ne 0">
                     <tr th:each="list : ${noticeList}" class="js-modalShow notice-btn" data-modal="notice">
-                        <td class="check"><input type="checkbox" name="listCheck"></td>
+
+                        <input type="hidden" class="noticeContent" th:value="${list.content}">
+
+                        <td class="check"><input type="checkbox" name="listCheck" onclick="event.cancelBubble=true"></td>
                         <td>
                             <span class="noticeIdx" th:text="${list.idx}"></span>
                         </td>
                         <td>
-                            <span class="noticeTitle" th:text="${list.title}"></span>
-                        </td>
-                        <td>
-                            <div class="review-wrap" th:if="${list.content.length > 15}">
-                                <span class="noticeContent" th:text="${list.content.substring(0, 15)}"></span>
-                            </div>
-                            <div class="review-wrap" th:unless="${list.content.length > 15}">
-                                <span class="noticeContent" th:text="${list.content}"></span>
+                            <div class="f-center">
+                                <span class="noticeTitle content-overflow" th:text="${list.title}"></span>
                             </div>
                         </td>
                         <td>
                             <span class="noticeAuthor" th:text="${list.author}"></span>
                         </td>
                         <td>
-                            <span class="noticePostDate" th:text="${list.postDate}"></span>
-<!--                            <span th:text="${#dates.format(list.postDate, 'yyyy-MM-dd')}"></span>-->
+                            <span class="noticePostDate" th:text="${#strings.substring(#strings.replace(list.postDate, 'T', ' '), 0, 16)}"></span>
                         </td>
                     </tr>
                     </tbody>
@@ -100,7 +87,7 @@
         </section>
     </main>
 
-    <div class="modal modal-notice w-760" data-modal="notice">
+    <div class="modal modal-notice w-800" data-modal="notice">
         <div class="modal__inner">
             <div class="modal-head">
                 <span class="modal__title">공지사항 상세</span>
@@ -108,29 +95,37 @@
             </div>
             <div class="write">
                 <input type="hidden" class="modal-id">
+                <input type="hidden" id="postDate">
                 <div class="write-body">
-                    <div class="modal-notice">
-                    <fieldset class="fieldset">
-                        <div class="input-wrap">
-                            <label class="label">글 번호</label>
-                            <input type="text" id="idx" class="input" readonly/>
-                        </div>
-                        <div class="input-wrap">
-                            <label class="label">제목<i class="required">*</i></label>
-                            <input type="text" id="title" class="input" spellcheck="false" placeholder="제목 입력">
-                        </div>
-                        <div class="input-wrap">
-                            <label class="label">작성자<i class="required">*</i></label>
-                            <input type="text" id="author" class="input" spellcheck="false" readonly>
-                        </div>
-                        <div class="input-wrap">
-                            <label class="label">내용</label>
-                            <textarea id="content" class="textarea"></textarea>
-                        </div>
-                        <div class="hidden">
-                            <input type="text" id="postDate" class="input" readonly>
-                        </div>
-                    </fieldset>
+                    <div class="table">
+                        <table>
+                            <tbody>
+                            <tr>
+                                <td class="modal-th">번호</td>
+                                <td id="idx" class="modal-td"></td>
+                            </tr>
+                            <tr>
+                                <td class="modal-th">작성자</td>
+                                <td id="author" class="modal-td"></td>
+                            </tr>
+                            <tr>
+                                <td class="modal-th">제목</td>
+                                <td class="modal-td">
+                                    <div class="input-wrap">
+                                        <input type="text" id="title" class="input" spellcheck="false" placeholder="제목 입력">
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="modal-th">내용</td>
+                                <td class="modal-td">
+                                    <div class="input-wrap">
+                                        <textarea id="content" class="textarea" spellcheck="false"></textarea>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                     <div class="form__action bottom">
                         <button class="btn-del hospital-delete">삭제하기</button>
