[관리자페이지] 의뢰관리 계약진행 상태 추가

--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -22,6 +22,7 @@
                                     <option value="상담완료" th:selected="${state} eq '상담완료'">상담완료</option>
                                     <option value="의뢰대기" th:selected="${state} eq '의뢰대기'">의뢰대기</option>
                                     <option value="의뢰거절" th:selected="${state} eq '의뢰거절'">의뢰거절</option>
+                                    <option value="계약진행" th:selected="${state} eq '계약진행'">계약진행</option>
                                     <option value="임무진행" th:selected="${state} eq '임무진행'">임무진행</option>
                                     <option value="임무완료" th:selected="${state} eq '임무완료'">임무완료</option>
                                 </select>
@@ -220,6 +221,7 @@
                                             <option value="상담완료">상담완료</option>
                                             <option value="의뢰대기">의뢰대기</option>
                                             <option value="의뢰거절">의뢰거절</option>
+                                            <option value="계약진행">계약진행</option>
                                             <option value="임무진행">임무진행</option>
                                             <option value="임무완료">임무완료</option>
                                         </select>
