--- a/src/main/resources/templates/admin/fragments/config.html
+++ b/src/main/resources/templates/admin/fragments/config.html
@@ -23,8 +23,9 @@
         <script defer th:src="@{/assets/js/admin/common.js}"></script>
         <script defer th:src="@{/assets/js/admin/layout.js}"></script>
         <script defer th:src="@{/assets/js/admin/event.js}"></script>
-        <script defer th:src="@{/assets/js/admin/modal.js}"></script>
+        <script defer th:src="@{/assets/js/admin/modal.js}"></script>       
         <script defer th:src="@{/assets/js/admin/companysHiddencamList.js}"></script>
+        <script defer th:src="@{/assets/js/admin/removeListItem02.js}"></script>
         <script defer th:src="@{/assets/js/admin/noticemodal.js}"></script>
         <script defer th:src="@{/assets/js/admin/banner.js}"></script>
         <script defer th:src="@{/assets/js/admin/price.js}"></script>
