--- a/src/main/resources/templates/admin/company/list.html
+++ b/src/main/resources/templates/admin/company/list.html
@@ -60,7 +60,7 @@
 
                     <tbody th:if="${count} ne 0">
                     <tr th:each="list : ${companyList}" th:onclick="|linkTo(event,'/admin/manage/company/details?companysIdx=${list.companysIdx}')|">
-                        <td class="check"><input type="checkbox" name="listCheck"></td>
+                        <td class="check"><input class="listCheck" type="checkbox" name="listCheck" th:value="${list.companysIdx}"></td>
                         <td><span th:text="${list.companysIdx}"></span></td>
                         <td>
                             <span th:text="${list.companysName}"></span>
@@ -129,6 +129,7 @@
             listCheck();
             telFormat();
             safetyFormat();
+            removeListItem02("/admin/manage/company/listDelete");
             new Table(document.querySelector('#main table'));
         });
     </script>
