[관리자 페이지] 신고내역 채팅보기 처리중

--- a/src/main/resources/static/assets/css/admin/main.css
+++ b/src/main/resources/static/assets/css/admin/main.css
@@ -3268,6 +3268,9 @@ meter::-webkit-meter-optimum-value {
   text-align: start;
   width: 140px;
 }
+.td-hidden {
+  display: none !important;
+}
 .modal-tr-hidden {
   display: none !important;
 }
