공지사항 게시판 내용 게시판 편집기 반영중

--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -123,6 +123,9 @@
                                 <td class="modal-td">
                                     <div class="input-wrap">
                                         <textarea id="content" class="textarea" spellcheck="false"></textarea>
+                                    <!-- <div class="text-wrap editor-details-wrap e-wrap">
+                                        <div id="editor" th:utext=""></div>
+                                    </div> -->
                                     </div>
                                 </td>
                             </tr>
